--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -10,8 +10,16 @@ body {
     content: "";
     width: 100%;
     height: 100vh;
-    //background: linear-gradient(to right bottom, #6d327c, #485DA6, #00a1ba, #01b18e, #32b37b);
-    // background: #D3D3D3;
+    font-size: 10px;
+    // background: linear-gradient(
+    //   to right bottom,
+    //   #6d327c,
+    //   #485da6,
+    //   #00a1ba,
+    //   #01b18e,
+    //   #32b37b
+    // );
+    // background: #d3d3d3;
     position: fixed;
     left: 0;
     top: 0;
