--- a/styles/styles.css
+++ b/styles/styles.css
@@ -265,8 +265,7 @@
   left: 20px;
   top: -100px;
 }
-form {
-  /* height: 520px; */
+/* form {
   width: 400px;
   background-color: rgba(100, 91, 91, 0.178);
   position: absolute;
@@ -278,7 +277,7 @@ form {
   border: 2px solid rgba(255, 255, 255, 0.1);
   box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
   padding: 50px 35px;
-}
+} */
 
 form * {
   font-family: "Poppins", sans-serif;
